Remove Google Autovalue